fix test to travis 1

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_script:
 
 script:
  - /usr/racket/bin/raco make -v Serene.rkt
- - /usr/racket/bin/raco make -v ss.rkt
+ - /usr/racket/bin/raco exe -v ss.rkt
 
 after_script:
  - ss Hello cruel world
